Diagramas y Tablas de Transiones
Sobre las 5 maquinas de Turing

--- a/Simulador Maquinas de Turing/Simulador Maquinas de Turing/Simulador Maquinas de Turing.csproj
+++ b/Simulador Maquinas de Turing/Simulador Maquinas de Turing/Simulador Maquinas de Turing.csproj
@@ -95,5 +95,8 @@
   <ItemGroup>
     <None Include="Resources\circulo-amarillo.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\robot.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
